<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/adView">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding"
            android:animateLayoutChanges="true">

            <android.support.v7.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin"
                app:cardCornerRadius="@dimen/corner_radius"
                app:cardElevation="@dimen/elevation"
                app:cardUseCompatPadding="true"
                app:cardPreventCornerOverlap="true"
                android:visibility="gone">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/padding">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorSecondaryText"
                        android:textSize="16sp"
                        android:text="@string/simple_interest_amount"/>

                    <TextView
                        android:id="@+id/simpleInterestResult"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="end"
                        android:textStyle="bold"
                        android:textColor="@color/colorPrimaryText"
                        android:textSize="18sp"/>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="@dimen/margin"
                        android:background="@color/colorDivider"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin"
                        android:textColor="@color/colorSecondaryText"
                        android:textSize="16sp"
                        android:text="@string/compound_interest_amount"/>

                    <TextView
                        android:id="@+id/compoundInterestResult"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="end"
                        android:textStyle="bold"
                        android:textColor="@color/colorPrimaryText"
                        android:textSize="18sp"/>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="@dimen/margin"
                        android:background="@color/colorDivider"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin"
                        android:textColor="@color/colorSecondaryText"
                        android:textSize="16sp"
                        android:text="@string/invest_interest_amount"/>

                    <TextView
                        android:id="@+id/investInterestResult"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="end"
                        android:textStyle="bold"
                        android:textColor="@color/colorPrimaryText"
                        android:textSize="18sp"/>

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/principalField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberSigned"
                    android:nextFocusDown="@+id/interestField"
                    android:hint="@string/principal"
                    android:textSize="16sp"/>

            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin"
                android:baselineAligned="true">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <EditText
                        android:id="@+id/interestField"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="numberDecimal"
                        android:nextFocusDown="@+id/periodField"
                        android:hint="@string/interest"
                        android:textSize="16sp"/>

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="">

                    <EditText
                        android:id="@+id/periodField"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="numberSigned"
                        android:nextFocusDown="@+id/investField"
                        android:hint="@string/period"
                        android:textSize="16sp"/>

                </android.support.design.widget.TextInputLayout>

                <Spinner
                    android:id="@+id/spinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginBottom="5dp"/>

            </LinearLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/investInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin">

                <EditText
                    android:id="@+id/investField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberSigned"
                    android:imeOptions="actionDone"
                    android:textSize="16sp"/>

            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin">

                <Button
                    android:id="@+id/calculateButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:background="@drawable/button_bg"
                    android:textSize="20sp"
                    android:textColor="@android:color/white"
                    android:text="@string/calculate"
                    style="?android:attr/buttonBarButtonStyle"/>

                <Button
                    android:id="@+id/clearButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginStart="@dimen/margin"
                    android:background="@drawable/button_bg"
                    android:textSize="20sp"
                    android:textColor="@android:color/white"
                    android:text="@string/clear"
                    style="?android:attr/buttonBarButtonStyle"/>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@android:color/white"
        android:visibility="gone"
        ads:adUnitId="ca-app-pub-2754939326809910/4956864984"
        ads:adSize="SMART_BANNER"/>

</RelativeLayout>